# project-euler

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  Solve.hpp  Solve001.cpp  Solve002.cpp  Solve003.cpp
test/: CMakeLists.txt  MainTest.cpp  Test001.cpp  Test002.cpp  Test003.cpp
